--- a/P004199.opf/meta.yml
+++ b/P004199.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004199
+id: P004199
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W27877
   title: ཡང་ཏིག་ཡེ་ཤེས་མཐོང་གྲོལ་གྱི་ཆོས་སྐོར
-  volume: ''
   author: ''
+  volumes: {}
