--- a/P004199.opf/layers/v001/Pagination.yml
+++ b/P004199.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b796f742c9ff492580daff0b6da55566
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3b2c84721eab46f9ba77f308951cf9a6:
