--- a/P004199.opf/meta.yml
+++ b/P004199.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004199
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W27877
   title: ཡང་ཏིག་ཡེ་ཤེས་མཐོང་གྲོལ་གྱི་ཆོས་སྐོར
