--- a/P004199.opf/meta.yml
+++ b/P004199.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P004199
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:00:23.955583
 source_metadata:
   id: bdr:W27877
   title: ཡང་ཏིག་ཡེ་ཤེས་མཐོང་གྲོལ་གྱི་ཆོས་སྐོར
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 602
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
